@@ -34,6 +34,10 @@ public:
     Input(const std::string command, Container::const_iterator from, Container::const_iterator to)
         : ArgList(from, to), command_(std::make_shared<std::string>(command)) {}
 
+    //! create a new Input but drop already parsed arguments
+    Input(const Input& other)
+        : ArgList(other.toVector()), command_(other.command_) {}
+
     const std::string& command() const { return *command_; }
 
     Input &operator>>(std::string &val) override;
